fix(api-client): add extra padding to make room for save pop over (#8694)
* fix(api-client): add extra padding to make room for save pop over

* fix(themes): move utilities to themes root

* docs(changeset): feat: add padding utilities to scalar themes

--- a/packages/components/src/utilities.css
+++ b/packages/components/src/utilities.css
@@ -2,11 +2,6 @@
  * Components Specific Tailwind Utilities
  */
 
-@utility max-w-screen-padded-* {
-  max-width: calc(100vw - (--value(integer) * 2 * var(--spacing)));
-  max-width: calc(100vw - (--value([length]) * 2));
-}
-
 @utility max-w-radix-popper {
   max-width: calc(var(--radix-popper-available-width) - 8px);
 }
